<!-- Dhairya Pal N01576099 -->

<resources>
    <string name="app_name">DhairyaLab122</string>
    <string name="all_characters_but_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!"#$%&amp;'()*+,-./:;?@[\]^_`{|}~</string>
    <string name="full_name_studentid">Dhairya Pal N01576099</string>
    <string name="empty_not_allowed">Empty not allowed</string>
    <string name="invalid_input">Invalid input</string>
    <string name="empty_string" />
    <string name="no_data_to_delete">No data to delete</string>
    <string name="coursesindatabase">coursesInDatabase</string>
    <string name="delete_this_record">Delete this record?</string>
    <string name="delete">DELETE</string>
    <string name="regex">^[A-Z]{4}-\\d{3,4}$</string>
    <string name="enter_course_name">Enter course name</string>
    <string name="enter_course_description">Enter course description</string>
    <string name="add">Add</string>
    <string name="delete_camelcase">Delete</string>
    <string name="dhairya">Dhairya</string>
    <string name="pal">Pal</string>
    <string name="n01576099">N01576099</string>
    <string name="dp">DP</string>
    <string-array name="website_urls">
        <item>file:///android_asset/index.html</item>
        <item>https://www.rollingstone.com/</item>
        <item>https://www.linkedin.com/</item>
        <item>https://www.cnn.com/</item>
    </string-array>
    <string-array name="websites">
        <item>Select URL from list</item>
        <item>Rolling Stone</item>
        <item>LinkedIn</item>
        <item>CNN</item>
    </string-array>
    <string name="embed_websites">Embed websites</string>
    <string name="dhairya_pal">"Dhairya Pal "</string>
    <string name="numbers">0123456789</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_message">Enter message</string>
    <string name="send_sms">Send SMS</string>
    <string name="can_not_be_empty">Can not be empty</string>
    <string name="must_be_ten_digits">Must be ten digits</string>
    <string name="sydneydhairya">SydneyDhairya</string>
    <string name="newline">\n</string>
    <string name="dismiss">DISMISS</string>
    <string name="permission_denied">Permission denied</string>
    <string name="sms_delivered">SMS delivered</string>
    <string name="sms_not_delivered">SMS not delivered</string>
    <string name="sms_sent">SMS sent</string>
    <string name="generic_failure">Generic failure</string>
    <string name="no_service">No service</string>
    <string name="null_pdu">Null PDU</string>
    <string name="radio_off">Radio off</string>
    <string name="sms_sent_underscore">SMS_SENT</string>
    <string name="sms_delivered_underscore">SMS_DELIVERED</string>
    <string name="course_name">Course name</string>
    <string name="course_description">Course description</string>
</resources>