<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/faintPink"
    tools:context=".DP44">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textStyle="italic|bold"
        android:textSize="20sp"
        android:rotation="+45"
        android:layout_marginTop="50dp"
        android:layout_marginStart="100dp"
        android:text="@string/dhairya" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textStyle="italic|bold"
        android:textSize="20sp"
        android:rotation="-45"
        android:layout_marginTop="50dp"
        android:layout_marginStart="250dp"
        android:text="@string/pal" />

    <EditText
        android:id="@+id/dhaNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:hint="@string/enter_phone_number"
        android:digits="@string/numbers"
        android:maxLength="10" />

    <EditText
        android:id="@+id/dhaSmsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:hint="@string/enter_message" />

    <Button
        android:id="@+id/dhaSendSmsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginHorizontal="140dp"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/send_sms" />

</FrameLayout>